added new jasmine specs for testing of some array oriented coding challenges/updated SpecRunner.html accordingly

--- a/public/SpecRunner.html
+++ b/public/SpecRunner.html
@@ -13,10 +13,15 @@
 
   <!-- include source files here... -->
   <script src="js/concepts/coding-challenges/arrays/containsDuplicates.js"></script>
+  <script src="js/concepts/coding-challenges/arrays/flatten.js"></script>
+  <script src="js/concepts/coding-challenges/arrays/greatestProduct.js"></script>
+  <script src="js/concepts/coding-challenges/arrays/maxValue.js"></script>
 
   <!-- include spec files here... -->
   <script src="js/spec/containsDuplicatesSpec.js"></script>
-
+  <script src="js/spec/flattenSpec.js"></script>
+  <script src="js/spec/greatestProductSpec.js"></script>
+  <script src="js/spec/maxValueSpec.js"></script>
 </head>
 
 <body>
