added more jasmine test specs

--- a/public/SpecRunner.html
+++ b/public/SpecRunner.html
@@ -16,12 +16,22 @@
   <script src="js/concepts/coding-challenges/arrays/flatten.js"></script>
   <script src="js/concepts/coding-challenges/arrays/greatestProduct.js"></script>
   <script src="js/concepts/coding-challenges/arrays/maxValue.js"></script>
+  <script src="js/concepts/coding-challenges/strings/reverse.js"></script>
+  <script src="js/concepts/coding-challenges/strings/palindrome.js"></script>
+  <script src="js/concepts/coding-challenges/numbers/fibonacci.js"></script>
+  <script src="js/concepts/coding-challenges/numbers/sum.js"></script>
+  <script src="js/concepts/coding-challenges/numbers/findAngle.js"></script>
 
   <!-- include spec files here... -->
-  <script src="js/spec/containsDuplicatesSpec.js"></script>
-  <script src="js/spec/flattenSpec.js"></script>
-  <script src="js/spec/greatestProductSpec.js"></script>
-  <script src="js/spec/maxValueSpec.js"></script>
+  <script src="js/spec/arrays/containsDuplicatesSpec.js"></script>
+  <script src="js/spec/arrays/flattenSpec.js"></script>
+  <script src="js/spec/arrays/greatestProductSpec.js"></script>
+  <script src="js/spec/arrays/maxValueSpec.js"></script>
+  <script src="js/spec/strings/reverseSpec.js"></script>
+  <script src="js/spec/strings/palindromeSpec.js"></script>
+  <script src="js/spec/numbers/fibonacciSpec.js"></script>
+  <script src="js/spec/numbers/sumSpec.js"></script>
+  <script src="js/spec/numbers/findAngleSpec.js"></script>
 </head>
 
 <body>
